2011-03-30  Chong Yidong  <cyd@stupidchicken.com>

	* proto-stream.el (open-protocol-stream): Bring back `network' type.
	Make this the default type.
	(proto-stream-open-plain): Rename from proto-stream-open-default.
	(open-protocol-stream, proto-stream-open-starttls)
	(proto-stream-open-tls, proto-stream-open-shell): Replace `default'
	with `plain'.

	* nnimap.el (nnimap-stream, nnimap-open-connection-1): Accept `network'
	value.

	* nntp.el (nntp-open-connection-function): Document the fact that some
	values are not functions but are instead handled specially.  Recognize
	nntp-open-plain-stream value.
	(nntp-open-connection): Recognize that value.

2011-03-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Only do the defcustom compilation thing on XEmacs,
	where it seems to be needed.

2011-03-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gssapi.el (open-gssapi-stream): Remove the last mentions of the IMAP
	stuff.

	* gnus-score.el (gnus-score-string): Fix calling convention of
	`gnus-simplify-buffer-fuzzy' after last patches.

	* gnus-sum.el (gnus-update-marks): Don't send any marks updates to the
	server for articles we didn't get any headers for.  This is a sanity
	check.

2011-03-29  Michael Welsh Duggan  <md5i@md5i.com>

	* nnimap.el (nnimap-open-connection-1): Is the login responds with a
	new CAPABILITY, use it.

2011-03-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-agent.el (gnus-agent-fetch-headers): Don't message if we're not
	downloading anything.

	* gnus.el (gnus-splash-svg-color-symbols): Removed superfluous `and'.

2011-03-29  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus.el (gnus-group-startup-message): Prefer svg file and replace
	colors.
	(gnus-splash-svg-color-symbols): New function.

2011-03-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-simplify-buffer-fuzzy): Take the regexp explicitly
	instead of using the global gnus-simplify-subject-fuzzy-regexp.
	(gnus-simplify-subject-fuzzy): Use the local